[#100054060] fix slide 2 layout on mobile

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -25,6 +25,9 @@
   height: 10rem;
 }
 .slide-2 .items-secondary {
+  height: 4rem;
+}
+.slide-2 .items-terciary {
   height: 5rem;
 }
 
